[gd_scene load_steps=8 format=3 uid="uid://bbuymm13kjypt"]

[ext_resource type="Script" path="res://Scripts/Player.gd" id="1_btcab"]
[ext_resource type="Script" path="res://Scripts/PlayerCam.gd" id="2_m88ak"]
[ext_resource type="Script" path="res://Scripts/PauseMenu.gd" id="3_gwn0o"]
[ext_resource type="Script" path="res://Scripts/RespawnMenu.gd" id="4_a400j"]
[ext_resource type="PackedScene" uid="uid://bx3enqaqj2bvq" path="res://Scenes/inventory.tscn" id="5_ejf2h"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_3vo23"]
radius = 0.25
height = 1.0

[sub_resource type="CapsuleMesh" id="CapsuleMesh_v75x5"]
radius = 0.25
height = 1.0

[node name="Player" type="CharacterBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 4.71715, 0)
script = ExtResource("1_btcab")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)
shape = SubResource("CapsuleShape3D_3vo23")

[node name="Head" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.75, 0)

[node name="Camera3D" type="Camera3D" parent="Head"]
fov = 90.0
script = ExtResource("2_m88ak")

[node name="Reach" type="Node3D" parent="Head"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -1.5)

[node name="PlayerHealth" type="Label" parent="."]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -34.0
offset_right = 287.0
grow_vertical = 0
text = "health: 10"

[node name="PauseMenu" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("3_gwn0o")

[node name="ButtonMenu" type="CenterContainer" parent="PauseMenu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="PauseMenu/ButtonMenu"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="PauseMenu/ButtonMenu/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 50
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 50

[node name="VBoxContainer" type="VBoxContainer" parent="PauseMenu/ButtonMenu/PanelContainer/MarginContainer"]
layout_mode = 2

[node name="Resume" type="Button" parent="PauseMenu/ButtonMenu/PanelContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
text = "Resume"

[node name="Options" type="Button" parent="PauseMenu/ButtonMenu/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Options"

[node name="Exit to Menu" type="Button" parent="PauseMenu/ButtonMenu/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Exit to Menu"

[node name="Title" type="CenterContainer" parent="PauseMenu"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = 30.0
offset_bottom = 199.0
grow_horizontal = 2

[node name="PanelContainer" type="PanelContainer" parent="PauseMenu/Title"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="PauseMenu/Title/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 20

[node name="Label" type="Label" parent="PauseMenu/Title/PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "Epic Survival Game"

[node name="RespawnMenu" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("4_a400j")

[node name="PanelContainer" type="PanelContainer" parent="RespawnMenu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="RespawnMenu/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 300
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 300
theme_override_constants/margin_bottom = 20

[node name="ButtonMenu" type="CenterContainer" parent="RespawnMenu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="RespawnMenu/ButtonMenu"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="RespawnMenu/ButtonMenu/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 50
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 50

[node name="VBoxContainer" type="VBoxContainer" parent="RespawnMenu/ButtonMenu/PanelContainer/MarginContainer"]
layout_mode = 2

[node name="Respawn" type="Button" parent="RespawnMenu/ButtonMenu/PanelContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
text = "Respawn"

[node name="Exit to Menu" type="Button" parent="RespawnMenu/ButtonMenu/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Exit to menu
"

[node name="Title" type="CenterContainer" parent="RespawnMenu"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = 30.0
offset_bottom = 199.0
grow_horizontal = 2

[node name="PanelContainer" type="PanelContainer" parent="RespawnMenu/Title"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="RespawnMenu/Title/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 250
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 250
theme_override_constants/margin_bottom = 20

[node name="Label" type="Label" parent="RespawnMenu/Title/PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "You Died!"

[node name="Inventory" parent="." instance=ExtResource("5_ejf2h")]
visible = false

[node name="OptionsMenu" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Crosshair" type="Label" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "+"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.502403, 0)
mesh = SubResource("CapsuleMesh_v75x5")

[connection signal="pressed" from="PauseMenu/ButtonMenu/PanelContainer/MarginContainer/VBoxContainer/Resume" to="PauseMenu" method="_on_resume_pressed"]
[connection signal="pressed" from="PauseMenu/ButtonMenu/PanelContainer/MarginContainer/VBoxContainer/Exit to Menu" to="PauseMenu" method="_on_exit_to_menu_pressed"]
[connection signal="pressed" from="RespawnMenu/ButtonMenu/PanelContainer/MarginContainer/VBoxContainer/Respawn" to="RespawnMenu" method="_on_respawn_pressed"]
[connection signal="pressed" from="RespawnMenu/ButtonMenu/PanelContainer/MarginContainer/VBoxContainer/Exit to Menu" to="RespawnMenu" method="_on_exit_to_menu_pressed"]
